--- a/public/views/main.html
+++ b/public/views/main.html
@@ -122,7 +122,7 @@
                   </button>
                   <h5 style="margin-left: 10px;">{{ selectedPost.totalVotes | number }} Votes</h5>
                 </div>
-                <div class="sb-button donate">
+                <!-- <div class="sb-button donate">
                   <button class="hidden"
                     id="stripeCheckout"
                     stripe-checkout="checkout"
@@ -146,7 +146,7 @@
                     <div class="sb-template">Donate {{ donation.amount | currency }}</div>
                   </button>
                   <p ng-if="donation.mode">After merchant fees, {{ (donation.amount - 0.3) * 0.97 | currency }} will be donated to {{ selectedPost.name }}.</p>
-                </div>
+                </div> -->
               <div class="clearfix"></div>
               <div class="col-md-12" style="margin-left: -7px;">
                 <button class="btn btn-danger" ng-click="donation.mode = false; donation.amount = 0;" ng-if="donation.mode">Cancel</button>
